--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ form input:not([type="submit"]) {
   background-color: transparent;
   border: none;
   cursor: pointer;
+  pointer-events: all;
 }
 
 select {
