--- a/main.css
+++ b/main.css
@@ -15,6 +15,10 @@ a {
 }
 main {
   min-height: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 main h1 {
   margin-top: 2rem;
