--- a/cards/style.css
+++ b/cards/style.css
@@ -99,6 +99,7 @@ td {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 3rem
 }
 .bill_body {
   padding: 10px;
@@ -113,7 +114,7 @@ td {
 }
 
 #output {
-  margin: 3rem;
+  /* margin: 3rem; */
   display: flex;
   flex-direction: column;
 }
@@ -166,4 +167,9 @@ select {
   margin-top: 10px;
   transition: 0.5s;
   pointer-events: all;
+}
+
+.space {
+  height: 50px;
+  width: 20px;
 }
